--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,11 @@
 
 
 
+<!-- Card -->
 
+ 
+  
+  <!-- Content -->
   <div class=" black-text card d-flex align-items-center  py-2 px-2">
     <div class="rgba-white-strong pt-3 pb-3 pl-3 pr-3" style="border-radius:25px;">
       <div class="rgba-white-strong pt-3 pb-3 pl-3 pr-3" style="border-radius:25px;">
@@ -57,44 +61,36 @@
   
 
     
-      <div class="container d-flex p-1"></div>
-    <!-- Card -->
-    <div class="container">
-    <div class="row ">
-    <div class="p-3">
-      <div class="col">
-      <div class="card p-1 col-sm-5 ">
       
-        <img class="card-img-top rounded" src="<%= landscape.img %>" alt="Card image cap">
-        <div class="card-img-overlay text-white font-weight-bold"><h4><%= landscape.title %></h4></div>
-        <div class="card-body">
+    <!-- Card -->
+   
+    <div class="row ">
+     
+        <div class="card">
+      
+          <img class="card-img-top" src="<%= landscape.img %>" alt="Card image cap">
+          <div class="card-img-overlay text-white font-weight-bold"><h4><%= landscape.title %></h4></div>
+          <div class="card-body">
          
           
-          <p class="card-text"><%= landscape.description %></p>
-          <div class="row">
-            <div class="col">
-              <%if (landscape.featured == true) { %>
+            <p class="card-text"><%= landscape.description %></p>
+            <div class="row">
+              <div class="col">
+                <%if (landscape.featured == true) { %>
                 <i class="fas fa-heart"></i>
                 <% } %>
+              </div>
+              <div class="col-8">
+                <p class="card-text text-right"><%= landscape.date %> </p>
+              </div>
             </div>
-            <div class="col-8">
-              <p class="card-text text-right"><%= landscape.date %> </p>
-            </div>
+          </div>
         </div>
-        </div>
-      </div>
-      </div>
-      </div>
         
-      
+    </div>
+    </div>    
     <br>
-  
      <%});%>
-   
-   
-    
-  </div>
-
 </div>
   
     
