--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,9 +63,11 @@
     
       
     <!-- Card -->
-   
+    
     <div class="row ">
-     
+      
+      <div class="col-lg-4">
+             
         <div class="card">
       
           <img class="card-img-top" src="<%= landscape.img %>" alt="Card image cap">
@@ -87,10 +89,11 @@
           </div>
         </div>
         
-    </div>
+      </div> 
+      
     </div>    
     <br>
-     <%});%>
+    <%});%>
 </div>
   
     
